Re-write app using react

--- a/.babelrc
+++ b/.babelrc
@@ -5,14 +5,17 @@
       {
         "modules": false,
         "targets": {
-          "browsers": "> 1%",
-          "uglify": true
-        },
-        "useBuiltIns": true
+          "node": "current"
+        }
       }
     ],
     "react"
   ],
+  "env": {
+    "test": {
+      "presets": [["env"], "react"]
+    }
+  },
   "plugins": [
     "syntax-dynamic-import",
     "transform-object-rest-spread",
