--- a/package.json
+++ b/package.json
@@ -1,12 +1,29 @@
 {
+  "scripts": {
+    "test": "jest spec/javascript"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
+  },
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
+    "blueimp-md5": "^2.10.0",
+    "pluralize": "^7.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
+    "time-ago": "^0.2.1",
+    "type-detect": "^4.0.8"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.4.2",
+    "jest": "^23.4.2",
+    "regenerator-runtime": "^0.12.0",
     "webpack-dev-server": "2.11.2"
   }
 }
