--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: postgresql
   database: itter_development
-  username: tien
+  username: postgres
   encoding: unicode
   host: localhost
   pool: 5
@@ -18,7 +18,7 @@ development:
 test: &test
   adapter: postgresql
   database: itter_test
-  username: tien
+  username: postgres
   encoding: unicode
   host: localhost
   pool: 5
@@ -27,7 +27,7 @@ test: &test
 production:
   adapter: postgresql
   database: itter_production
-  username: tien
+  username: postgres
   encoding: unicode
   host: localhost
   pool: 5
