--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,11 +47,7 @@ jobs:
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
 
-            bin/rspec --format progress \
-                            --format RspecJunitFormatter \
-                            --out /tmp/test-results/rspec.xml \
-                            --format progress \
-                            $TEST_FILES
+            bin/rspec $TEST_FILES
 
       # collect reports
       - store_test_results:
