--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "blueimp-md5": "^2.10.0",
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
     "react-router-dom": "^4.3.1",
     "time-ago": "^0.2.1",
     "type-detect": "^4.0.8"
